jar名を defname へ変更．

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.lisb</groupId>
-  <artifactId>constant</artifactId>
+  <artifactId>defname</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>constant</name>
+  <name>defname</name>
   <url>http://maven.apache.org</url>
 
   <repositories>
