--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
+          <proc>none</proc>
         </configuration>
       </plugin>
     </plugins>
