--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 
 group = 'com.lisb.defname'
-version = '1.0.0-SNAPSHOT'
+version = '1.0.1'
 archivesBaseName = 'annotation'
 
 dependencies {
