--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -96,4 +97,5 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
-
+# Local configuration file (sdk path, etc)
+local.properties
