Java 6 から Java 8 へ更新
下記エラーの解消のため、 Java 6 から Java 8 へ更新

```
Task :annotation:compileJava FAILED エラー: ソース・オプション6は現在サポートされていません。8以降を使用してください。
エラー: ターゲット・オプション6は現在サポートされていません。8以降を使用してください。
```

--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -5,8 +5,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
-sourceCompatibility = "1.6"
-targetCompatibility = "1.6"
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     archiveClassifier.set('sources')
