--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -9,8 +9,8 @@ dependencies {
     testImplementation group: 'org.seasar.aptina', name: 'aptina-unit', version:'1.0.0'
 }
 
-sourceCompatibility = "1.6"
-targetCompatibility = "1.6"
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     archiveClassifier.set('sources')
