--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
-    id 'com.google.devtools.ksp' version '2.2.20-2.0.3'
+    id 'com.google.devtools.ksp' version '2.2.20-2.0.3' apply false
 }
 
 tasks.withType(JavaCompile) {
