--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -9,18 +9,18 @@ buildscript {
 }
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
-    id 'com.google.devtools.ksp' version '2.2.20-2.0.3'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'com.google.devtools.ksp'
     id 'maven-publish'
 }
 dependencies {
-    ksp project(':compiler')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':annotation')
     implementation group: 'com.squareup', name: 'javawriter', version:'2.1.1'
     testImplementation group: 'junit', name: 'junit', version:'4.8.1'
     testImplementation group: 'org.seasar.aptina', name: 'aptina-unit', version:'1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "com.google.devtools.ksp:symbol-processing-api:2.2.20-2.0.3"
 }
 
 
