--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
 
 dependencies {
@@ -7,10 +8,9 @@ dependencies {
     implementation group: 'com.squareup', name: 'javawriter', version:'2.1.1'
     testImplementation group: 'junit', name: 'junit', version:'4.8.1'
     testImplementation group: 'org.seasar.aptina', name: 'aptina-unit', version:'1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     archiveClassifier.set('sources')
@@ -37,4 +37,19 @@ publishing {
             version = package_version
         }
     }
+}
+buildscript {
+    ext.kotlin_version = '2.2.0'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+repositories {
+    mavenCentral()
+}
+kotlin {
+    jvmToolchain(8)
 }
