--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,3 @@
-apply plugin: 'java'
-apply plugin: 'kotlin'
-
-tasks.withType(JavaCompile) {
-	options.encoding = 'UTF-8'
-}
-
 buildscript {
     ext.kotlin_version = '2.2.0'
     ext.repository_name = 'GitHubPackages'
@@ -25,6 +18,15 @@ buildscript {
     }
 }
 
+plugins {
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
+    id 'com.google.devtools.ksp' version '2.2.20-2.0.3'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
 
 allprojects {
     repositories {
@@ -32,6 +34,7 @@ allprojects {
         mavenCentral()
         jcenter()
         maven { url "https://maven.seasar.org/maven2" }
+        gradlePluginPortal()
     }
 }
 repositories {
