--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,8 +1,20 @@
-apply plugin: 'java'
-apply plugin: 'kotlin'
-apply plugin: 'maven-publish'
-
+buildscript {
+    ext.kotlin_version = '2.2.0'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+plugins {
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
+    id 'com.google.devtools.ksp' version '2.2.20-2.0.3'
+    id 'maven-publish'
+}
 dependencies {
+    ksp project(':compiler')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':annotation')
     implementation group: 'com.squareup', name: 'javawriter', version:'2.1.1'
@@ -36,15 +48,6 @@ publishing {
             artifactId = 'compiler'
             version = package_version
         }
-    }
-}
-buildscript {
-    ext.kotlin_version = '2.2.0'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 repositories {
