--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -1,6 +1,8 @@
-apply plugin: 'java'
-apply plugin: 'kotlin'
-apply plugin: 'maven-publish'
+plugins {
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'maven-publish'
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -32,18 +34,6 @@ publishing {
             version = package_version
         }
     }
-}
-buildscript {
-    ext.kotlin_version = '2.2.0'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-repositories {
-    mavenCentral()
 }
 kotlin {
     jvmToolchain(8)
